testsuite/keen.dg/prep-012.c
/* { dg-do compile } */
/* { dg-options "-w" } */

#define A(..., x) 	__VA_ARGS__ 	// { dg-error "" }

	





